[package]
name = "radixdb"
version = "0.1.0"
edition = "2021"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.56"
fnv = { version = "1.0.7", optional = true }
parking_lot = { version = "0.12.0", optional = true }
hex = "0.4.3"
inplace-vec-builder = "0.1.1"
smallvec = "1.8.0"
impl-visibility = { git = "https://github.com/rklaehn/impl-visibility" }
visibility = "0.0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap = "0.7.0"

[features]
custom-store = ["parking_lot"]
fallible-store = ["custom-store", "fnv"]
# default = ["fallible-store"]

[dev-dependencies]
thousands = "0.2.0"
obey = "0.1.0"
env_logger = "0.9.0"
log = "0.4.16"
maplit = "1.0.2"
proptest = "1.0.0"
tempfile = "3.3.0"
