[package]
name = "radixdb"
version = "0.2.5"
edition = "2021"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com"]
license = "MIT OR Apache-2.0"
keywords = ["database", "tree", "data-structures", "trie", "zerocopy"]
description = "a radix tree data structure for in memory or zero copy on disk storage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[workspace]
members = ["examples/*", "."]

[dependencies]
anyhow = "1.0.56"
hex = "0.4.3"
inplace-vec-builder = "0.1.1"
visibility = "0.0.1"
fnv = { version = "1.0.7", optional = true }
parking_lot = { version = "0.12.0", optional = true }
memmap = { version = "0.7.0", optional = true }

[features]
custom-store = []
mem-store = ["custom-store", "parking_lot"]
paged-file-store = ["custom-store", "memmap", "parking_lot", "fnv"]
default = ["custom-store", "mem-store", "paged-file-store"]

[dev-dependencies]
thousands = "0.2.0"
obey = "0.1.0"
env_logger = "0.9.0"
log = "0.4.16"
maplit = "1.0.2"
proptest = "1.0.0"
tempfile = "3.3.0"
hex-literal = "0.3.4"
