[package]
name = "sample"
version = "0.1.0"
edition = "2018"
authors = ["Oliver Wangler <oliver@wngr.de>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.56"
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
futures = "0.3.16"
futures-timer = { version = "3.0.2", features = ["wasm-bindgen"] }
js-sys = "0.3.53"
log = "0.4.14"
tracing = "0.1.32"
wasm-bindgen = "0.2.76"
wasm-bindgen-futures = "0.4.26"
wasm-futures-executor = { git = "https://github.com/rklaehn/wasm-futures-executor", branch = "send_lazy" }
radixdb = { path = "../" }
url = "2.2.2"
hex = "0.4.3"

[dependencies.web-sys]
version = "0.3.53"
features = ['DedicatedWorkerGlobalScope', 'WorkerGlobalScope', 'WorkerLocation', 'console', 'Blob', 'IdbIndex', 'IdbObjectStore', 'CacheStorage', 'Cache', 'Request', 'Response', 'StorageManager', 'Navigator', 'CacheQueryOptions']
