[package]
name = "sample"
version = "0.1.0"
edition = "2021"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com"]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.56"
futures = "0.3.16"
futures-timer = { version = "3.0.2", features = ["wasm-bindgen"] }
log = "0.4.14"
radixdb = { path = "../" }
url = "2.2.2"
hex = "0.4.3"
num-traits = "0.2.14"
parking_lot = "0.12.0"
getrandom = { version = "0.2.5", features = ["js"] }
js-sys = "0.3.53"
web-sys = { version = "0.3.53", features = ['DedicatedWorkerGlobalScope', 'WorkerGlobalScope', 'WorkerLocation', 'console', 'Blob', 'IdbIndex', 'IdbObjectStore', 'CacheStorage', 'Cache', 'Request', 'Response', 'StorageManager', 'Navigator', 'CacheQueryOptions'] }
wasm-bindgen = "0.2.76"
wasm-bindgen-futures = "0.4.26"
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
sqlite-vfs = { git = "https://github.com/rklaehn/sqlite-vfs", branch = "main" }
rusqlite = { git = "https://github.com/trevyn/rusqlite", branch = "wasm32-unknown-unknown", features = ["bundled"] }
libsqlite3-sys = { git = "https://github.com/trevyn/rusqlite", branch = "wasm32-unknown-unknown", features = ["bundled"] }
range-collections = "0.2.4"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-futures-executor = { git = "https://github.com/rklaehn/wasm-futures-executor", branch = "send_lazy" }
