[package]
name = "ipfs"
version = "0.1.0"
edition = "2021"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com"]

[dependencies]
anyhow = "1.0.56"
radixdb = { path = "../" }
hex = "0.4.3"
num-traits = "0.2.14"
parking_lot = "0.12.0"
log = "0.4.16"
env_logger = "0.9.0"
fnv = "1.0.7"
tempfile = "3.3.0"
sha2 = "0.10.2"
ref-cast = "1.0.7"
smallvec = "1.8.0"
libipld = "0.13.1"
maplit = "1.0.2"

[profile.release]
lto = true
debug = true

